bug fiex for dark mode

--- a/src/components/css/login.css
+++ b/src/components/css/login.css
@@ -25,6 +25,7 @@
 .input input {
   width: 100%;
   border: none;
+  background-color: transparent;
 }
 
 .login_form button,
